Hide options dropdown on outside click, fix slider on Firefox

--- a/bingo.css
+++ b/bingo.css
@@ -228,7 +228,7 @@ html, body {
 	-webkit-appearance: none;
 }
 
-input[type=range]::-webkit-slider-thumb{
+input[type=range]::-webkit-slider-thumb {
 	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 	border: 1px solid #000000;
 	height: 50px;
@@ -249,6 +249,10 @@ input[type=range]::-moz-range-thumb {
 	background-repeat: no-repeat;
 	cursor: pointer;
 	border-radius: 0px;
+}
+
+input[type=range]::-moz-range-track {
+	visibility: hidden;
 }
 
 input[type=range]::-ms-thumb {
